<resources>
    <string name="app_name">NewNormal</string>
    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_full_name">Ime i prezime</string>
    <string name="prompt_dob">Datum rođenja</string>
    <string name="prompt_password">Lozinka</string>
    <string name="action_sign_in">Prijava</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Registriracija</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sign_out">Odjavi se</string>

    <string name="menu_offers">Sve ponude</string>
    <string name="menu_user_offers">Moje ponude</string>
    <string name="menu_reservations">Moje rezervacije</string>
    <string name="menu_userprofile">Moj profil</string>

    <string name="home_second">Home Second</string>
    <string name="not_registered">Niste registrirani?</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_name">Unesite ime!</string>
    <string name="enter_surname">Unesite prezime!</string>
    <string name="enter_dob">Unesite datum rođenja!</string>
    <string name="enter_email">Unesite ispravan e-mail!</string>
    <string name="enter_password">Unesite lozinku!</string>
    <string name="wrong_email_or_password">Neispravan e-mail ili lozinka!</string>
    <string name="incorrect_email">Unesite ispravan e-mail</string>
    <string name="successful_registration">Uspješna registracija!</string>
    <string name="failed_registration">Neuspješna registracija!</string>
    <string name="successful_login">Uspješna prijava!</string>
    <string name="failed_login">Neuspješna prijava!</string>
    <string name="title">Naslov</string>
    <string name="description">Opis</string>
    <string name="price">Cijena (kn/noć)</string>
    <string name="save">Spremi</string>
    <string name="add_offer">Dodaj ponudu</string>
    <string name="input_all_data">Unesite sve tražene podatke!</string>
    <string name="offer_saved">Ponuda uspješno spremljena!</string>
    <string name="offer_not_saved">Ponuda neuspješno spremljena!</string>
    <string name="user_registered">Korisnik uspješno registriran!</string>
    <string name="offer_deleted">Ponuda uspješno obrisana!</string>
    <string name="edit_offer">Uredi ponudu</string>
    <string name="offer_cant_be_updated">Ponuda se ne može osvježiti!</string>
    <string name="offer_updated">Ponuda uspješno osvježena!</string>
    <string name="prompt_city">Mjesto</string>
    <string name="enter_post_code">Unesite poštanski broj!</string>
    <string name="enter_phone_number">Unesite broj telefona!</string>
    <string name="registration">Registracija</string>
    <string name="my_profile">Moj profil</string>
    <string name="name_surname">Ime Prezime</string>
    <string name="email">Email</string>
    <string name="city">Grad</string>
    <string name="accommodation_name">Ime smještaja</string>
    <string name="address">Adresa</string>
    <string name="post_code">Poštanski broj</string>
    <string name="phone_number">Broj telefona</string>
    <string name="offer_details_title">Detalji ponude</string>
    <string name="reserve">Napravi rezervaciju</string>
    <string name="successful_accommodation_reservation">Uspješna rezervacija smještaja!</string>
    <string name="reservation_canceled">Rezervacija uspješno otkazana!</string>
    <string name="pick_dates">Odaberite datum dolaska i odlaska!</string>
    <string name="dates_template">dd/mm/yyyy</string>
    <string name="pick_arrival_date">Odaberite datum dolaska:</string>
    <string name="text_hint"><b>Search for news...</b></string>
    <string name="news_article_description">News article description</string>
    <string name="news_article_title">News article title</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_source">News source</string>
    <string name="world_news">World news</string>
    <string name="croatian_news">Croatian news</string>
    <string name="world_covid_news">World COVID-19 news</string>
    <string name="croatian_covid_news">Croatian COVID-19 news</string>
    <string name="search">Search</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoia2I0OTM5NCIsImEiOiJja284am84bjcybjVvMnhwZzVmY3Y2NmcwIn0.E7aqpbW97z2UvJHVeURZvw</string>
    <string name="travel_risk_map">Travel risk map</string>
    <string name="info">Info</string>
    <string name="low_risk">Low risk</string>
    <string name="medium_risk">Medium risk</string>
    <string name="high_risk">High risk</string>
    <string name="extreme_risk">Extreme risk</string>
    <string name="travel_risk_info_text">Travel risk map shows the level of risk when travelling to a specific country. Levels of risk were calculated based on average risk assessments provided by different authorities. \n\nLevels of risk are divided into four categories:</string>
    <string name="last_updated_date">Last updated date</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
</resources>
