<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.activities.AddEditOfferActivity">

    <EditText
        android:id="@+id/et_offer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/accommodation_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_offer_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_offer_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_offer_post_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_code"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_offer_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/et_offer_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="number" />
</LinearLayout>