<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_offers"
            android:icon="@drawable/ic_local_offer"
            android:title="@string/menu_offers" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_user_offers" />
        <item
            android:id="@+id/nav_reservations"
            android:icon="@drawable/ic_date_range"
            android:title="@string/menu_reservations" />
        <item
            android:id="@+id/nav_userprofile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_userprofile" />
    </group>
</menu>
