<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all_offers">

    <fragment
        android:id="@+id/nav_all_offers"
        android:name="com.example.newnormal.ui.fragments.AllOffersFragment"
        android:label="@string/menu_offers"
        tools:layout="@layout/fragment_all_offers" />

    <fragment
        android:id="@+id/nav_offers"
        android:name="com.example.newnormal.ui.fragments.OffersFragment"
        android:label="@string/menu_user_offers"
        tools:layout="@layout/fragment_offers">
    </fragment>

    <fragment
        android:id="@+id/nav_reservations"
        android:name="com.example.newnormal.ui.fragments.ReservationsFragment"
        android:label="@string/menu_reservations"
        tools:layout="@layout/fragment_reservations" />

    <fragment
        android:id="@+id/nav_userprofile"
        android:name="com.example.newnormal.ui.fragments.UserProfileFragment"
        android:label="@string/menu_userprofile"
        tools:layout="@layout/fragment_user_profile" />
</navigation>