<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="40dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/iv_news_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/img_thumbnail" />

    <TextView
        android:id="@+id/tv_news_title"
        style="@style/viewParent.headerText"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/iv_news_image"
        android:textSize="15sp"
        android:maxLines="2"
        android:ellipsize="end"
        android:text="@string/news_article_title"
        android:layout_toEndOf="@id/iv_news_image"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/tv_news_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/featuredNewsContentColor"
        android:layout_toRightOf="@id/iv_news_image"
        android:layout_below="@id/tv_news_title"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:text="@string/news_article_description"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/iv_news_image" />

    <TextView
        android:id="@+id/tv_news_publishing_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dd_mm_yyyy"
        android:layout_alignParentBottom="true"
        android:textColor="#8E909A"
        android:textSize="11sp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/iv_news_image"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/iv_news_image" />

    <TextView
        android:id="@+id/tv_news_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_source"
        android:layout_alignParentBottom="true"
        android:textColor="#8E909A"
        android:textSize="11sp"
        android:layout_marginRight="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp" />
</RelativeLayout>